--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.4.0
@@ -37,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  meta: ^1.9.1
 
 dev_dependencies:
   build_runner: ^2.4.8
